// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-stories Props argument 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {props => <Button />}
</Story>

  ",
      "stories": Array [
        "storybook-mdx--story-with-props",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--story-with-props": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
      ],
      "id": "storybook-mdx--story-with-props",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 57,
          "line": 28,
        },
        "start": Object {
          "column": 38,
          "line": 28,
        },
      },
      "name": "story-with-props",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 28,
            },
            "start": Object {
              "column": 13,
              "line": 28,
            },
          },
          "name": "name",
          "value": "story-with-props",
        },
      ],
      "source": "props => <Button />",
    },
  },
}
`;

exports[`mdx-stories Three levels - alias 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {({ name: { first, last }, age }) => <Button />}
</Story>

  ",
      "stories": Array [
        "storybook-mdx--story-with-props",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--story-with-props": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 4,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 31,
                  "line": 1,
                },
                "start": Object {
                  "column": 16,
                  "line": 1,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 23,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 1,
                    },
                  },
                  "name": "first",
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 29,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": "last",
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 13,
                  "line": 3,
                },
                "start": Object {
                  "column": 10,
                  "line": 3,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storybook-mdx--story-with-props",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 33,
        },
        "start": Object {
          "column": 9,
          "line": 29,
        },
      },
      "name": "story-with-props",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 28,
            },
            "start": Object {
              "column": 13,
              "line": 28,
            },
          },
          "name": "name",
          "value": "story-with-props",
        },
      ],
      "source": "({
          name: { first, last },

          age,
        }) => <Button />",
    },
  },
}
`;

exports[`mdx-stories Two arguments 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {(props, context) => <Button />}
</Story>

  ",
      "stories": Array [
        "storybook-mdx--story-with-props",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--story-with-props": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "storybook-mdx--story-with-props",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 68,
          "line": 28,
        },
        "start": Object {
          "column": 38,
          "line": 28,
        },
      },
      "name": "story-with-props",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 28,
            },
            "start": Object {
              "column": 13,
              "line": 28,
            },
          },
          "name": "name",
          "value": "story-with-props",
        },
      ],
      "source": "(props, context) => <Button />",
    },
  },
}
`;

exports[`mdx-stories Two levels - alias 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {({ name: MyName, age }) => <Button />}
</Story>

  ",
      "stories": Array [
        "storybook-mdx--story-with-props",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--story-with-props": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storybook-mdx--story-with-props",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 29,
        },
        "start": Object {
          "column": 9,
          "line": 29,
        },
      },
      "name": "story-with-props",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 28,
            },
            "start": Object {
              "column": 13,
              "line": 28,
            },
          },
          "name": "name",
          "value": "story-with-props",
        },
      ],
      "source": "({ name: MyName, age }) => <Button />",
    },
  },
}
`;

exports[`mdx-stories Two levels sub arguments 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {({ name, age }) => <Button />}
</Story>

  ",
      "stories": Array [
        "storybook-mdx--story-with-props",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--story-with-props": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storybook-mdx--story-with-props",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 67,
          "line": 28,
        },
        "start": Object {
          "column": 38,
          "line": 28,
        },
      },
      "name": "story-with-props",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 28,
            },
            "start": Object {
              "column": 13,
              "line": 28,
            },
          },
          "name": "name",
          "value": "story-with-props",
        },
      ],
      "source": "({ name, age }) => <Button />",
    },
  },
}
`;

exports[`mdx-stories mdx-story 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"smart story\\">
  <Button />
</Story>

  ",
      "stories": Array [
        "storybook-mdx--smart-story",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--smart-story": Object {
      "id": "storybook-mdx--smart-story",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 30,
        },
        "start": Object {
          "column": 6,
          "line": 28,
        },
      },
      "name": "smart story",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 28,
            },
            "start": Object {
              "column": 13,
              "line": 28,
            },
          },
          "name": "name",
          "value": "smart story",
        },
      ],
      "source": "<Story name=\\"smart story\\">
        <Button />
      </Story>",
    },
  },
}
`;

exports[`mdx-stories no name 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "../components/BaseButton",
      "import": "import Button from '../components/BaseButton';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 22,
            },
            "start": Object {
              "column": 8,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 25,
            },
            "start": Object {
              "column": 8,
              "line": 23,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 24,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                },
              },
              "name": "component",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-story.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Story, Meta } from '@storybook/addon-docs/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story>
  <Button />
</Story>

  ",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;
